--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,11 @@ ext {
 }
 
 dependencies {
-    implementation "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}",
-            "ch.qos.logback:logback-classic:${logbackVersion}"
-
-    testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
-            "net.serenity-bdd:serenity-junit:${serenityCoreVersion}",
-            "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
-            "net.serenity-bdd:serenity-ensure:${serenityCoreVersion}",
-            "net.serenity-bdd:serenity-cucumber:${serenityCoreVersion}",
-            "junit:junit:${junitVersion}",
-            "org.assertj:assertj-core:${assertJVersion}"
+    implementation group: 'net.serenity-bdd', name: 'serenity-core', version: '2.0.84'
+    implementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '2.0.84'
+    implementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: '1.9.39'
+    implementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '2.0.84'
 }
 
 gradle.startParameter.continueOnFailure = true
