--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,2 @@
-chrome.switches=--no-first-run,--start-maximized,--homepage=about:blank
+webdriver.driver= chrome
+chrome.switches=--start-maximized--incognito
